# ai-invention-1a90b0-interference-based-structural-probing-br

./: README.md
dataset_iter1_graph_expressiv/demo/: data_code_demo.ipynb  mini_demo_data.json
dataset_iter1_graph_expressiv/src/: collect_graph_data.py  data.py
dataset_iter1_tudatasets_grap/demo/: data_code_demo.ipynb  mini_demo_data.json
dataset_iter1_tudatasets_grap/src/: data.py  data_out_mini.json  data_out_preview.json  full_data_out.json  mini_data_out.json  process_tudatasets.py
evaluation_iter4_isp_gin_compreh/demo/: eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter4_isp_gin_compreh/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json
experiment_iter2_isp_gnn_complex/demo/: method_code_demo.ipynb
experiment_iter2_isp_gnn_complex/src/: method.py  method_out.json  mini_data_out.json  mini_method_out.json  preview_data_out.json  preview_method_out.json
experiment_iter3_isp_gin_real_va/demo/: method_code_demo.ipynb
experiment_iter3_isp_gin_real_va/src/: full_data_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter3_isp_gin_real_va/src/isp_gin_ablation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
experiment_iter4_isp_gin_vs_real/src/: method.py  method_out.json  mini_method_out.json  preview_data_out.json  preview_method_out.json  pyproject.toml
experiment_iter4_isp_gin_vs_real/src/isp_gin_experiment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
paper/: paper.tex
paper_latex/: paper.tex
(+11 files in other folders)
