[project]
name = "isp-gin-ablation"
version = "0.1.0"
description = "ISP-GIN Real-Valued Ablation & Interference Isolation Experiment"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=1.26.0,<2.3.0",
    "networkx>=3.0",
    "scipy>=1.10.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
